Fix main image + thumbnail spacing

--- a/app/assets/stylesheets/content.css
+++ b/app/assets/stylesheets/content.css
@@ -297,7 +297,7 @@ hr {
 	background-color:#E5E5E5; 
 	width:96%; 
 	height:280px; 
-	margin-bottom:20px;
+	margin-bottom:0px;
 	margin-left:2%;
 	margin-top:2%;
 	-webkit-border-radius: 5px;
